--- a/src/components/PokedexPage/styles/Pokecard.css
+++ b/src/components/PokedexPage/styles/Pokecard.css
@@ -1,6 +1,7 @@
 .formulario{
-
-    text-align: center;
+    padding: 0.2em;
+    margin-right: 1em;
+    border: 2px solid black;
 }
 form{
     text-align: center;
